--- a/WebPage/templates/WebPage/base.html
+++ b/WebPage/templates/WebPage/base.html
@@ -20,12 +20,13 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Tienda Olivia</a>
+                <a class="navbar-brand" href="{% url 'inicio' %}">Tienda Olivia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!" role="button">Integrantes</a></li>
+                        <li class="nav-item"><a class="nav-link"  href="{% url 'inicio' %}">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'integrantes' %}" role="button">Sobre nosotras</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'sucursales' %}" role="button">Sucursales</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,21 +57,15 @@
             </div>
         </header>
 
-        <div>
-                
-              <form method="get">  
-                {{ formulario.as_p }}
-                <input type="submit" value="Buscar">
-              </form>  
-        
-        </div>
-
+ 
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     
                     {% block lista_productos %}{% endblock lista_productos %}
+
+                    {% block carga_productos %}{% endblock carga_productos %}
                     
                  
                 </div>
