--- a/WebPage/templates/WebPage/form_productos.html
+++ b/WebPage/templates/WebPage/form_productos.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de ingreso de productos</title>
-</head>
-<body>
-    
+{% extends 'WebPage/base.html' %}
+
+{% block carga_productos %}
+
     <form  method="post" > {% csrf_token %}
 
         {{ formulario.as_p }}
         <input type="submit" value="Crear">
         
-   </form>
+    </form>
+    
 
-
-</body>
-</html>
+{% endblock carga_productos %}
