formularios en todas las pags

--- a/WebPage/templates/WebPage/base.html
+++ b/WebPage/templates/WebPage/base.html
@@ -66,6 +66,11 @@
                     {% block lista_productos %}{% endblock lista_productos %}
 
                     {% block carga_productos %}{% endblock carga_productos %}
+
+                    {% block carga_integrantes %}{% endblock carga_integrantes %}
+                    {% block carga_sucursales %}{% endblock carga_sucursales %}
+
+                    
                     
                  
                 </div>
