--- a/WebPage/templates/WebPage/sucursales.html
+++ b/WebPage/templates/WebPage/sucursales.html
@@ -15,6 +15,12 @@
 </p>
               
     {% endfor %}
+
+</div>
+
+<a href="{% url 'carga_sucursales' %}" role="button">Cargar nueva sucursal</a>
+
+<div>
   
 {% endblock lista_sucursales %}
 
