--- a/WebPage/templates/WebPage/form_integrantes.html
+++ b/WebPage/templates/WebPage/form_integrantes.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de ingreso de integrantes del equipo</title>
-</head>
-<body>
+{% extends 'WebPage/base.html' %}
 
+
+{% block carga_integrantes %}
     <form  method="post" > {% csrf_token %}
 
         {{ formulario.as_p }}
@@ -16,5 +10,4 @@
    </form>
 
     
-</body>
-</html>
+   {% endblock carga_integrantes %}
