--- a/WebPage/templates/WebPage/form_sucursales.html
+++ b/WebPage/templates/WebPage/form_sucursales.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de carga de sucursales</title>
-</head>
-<body>
+{% extends 'WebPage/base.html' %} 
     
+{% block carga_sucursales %}
     <form  method="post" > {% csrf_token %}
 
         {{ formulario.as_p }}
@@ -15,7 +8,5 @@
         
    </form>
 
-
-
-</body>
-</html>
+ 
+{% endblock carga_sucursales %}
