CRUD completo - prueba login

--- a/WebPage/templates/WebPage/base.html
+++ b/WebPage/templates/WebPage/base.html
@@ -70,8 +70,11 @@
                     {% block carga_integrantes %}{% endblock carga_integrantes %}
                     {% block carga_sucursales %}{% endblock carga_sucursales %}
 
-                    
-                    
+                    {% block list_productos %}{% endblock list_productos %}
+
+                    {% block productos %}{% endblock productos %}
+                    {% block detail_productos %}{% endblock detail_productos %}
+                    {% block login %}{% endblock login %}
                  
                 </div>
             </div>
