--- a/log_web/templates/log_web/login.html
+++ b/log_web/templates/log_web/login.html
@@ -18,7 +18,7 @@
 
     {% endif %}
     
-    <form  method="post" > {% csrf_token %}
+    <form  method="POST" > {% csrf_token %}
 
         {{ formulario.as_p }}
         <input type="submit" value="login">
