--- a/WebPage/templates/WebPage/base.html
+++ b/WebPage/templates/WebPage/base.html
@@ -75,6 +75,8 @@
                     {% block productos %}{% endblock productos %}
                     {% block detail_productos %}{% endblock detail_productos %}
                     {% block login %}{% endblock login %}
+                    
+                    {% block contenido %}{% endblock contenido %}
                  
                 </div>
             </div>
