formato mi perfil

--- a/WebPage/templates/WebPage/base.html
+++ b/WebPage/templates/WebPage/base.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{% url 'inicio' %}">Tienda Olivia</a>
+                <a class="navbar-brand" href="{% url 'Tienda_Olivia' %}">Tienda Olivia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -28,12 +28,12 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'integrantes' %}" role="button">Sobre nosotras</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'sucursales' %}" role="button">Sucursales</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Mi perfil</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                                <li><a class="dropdown-item" href="{% url 'avatar' %}">Mi perfil</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                                <li><a class="dropdown-item" href="{% url 'editar_usuario' %}">Editar</a></li>
+                                <li><a class="dropdown-item" href="{% url 'Registrarse' %}">Registrarse</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -61,15 +61,9 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Bienvenidos a Tienda Olivia! </h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Gracias por elegirnos!!</p>
+                    <h1 class="display-4 fw-bolder">Productos</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">Estos son todos los productos de nuestra tienda</p>
                 
-
-
-
-
-
-
             </div>
         </header>
 
