fecha en mensajes

--- a/Mensajes/templates/Mensajes/form_mensaje.html
+++ b/Mensajes/templates/Mensajes/form_mensaje.html
@@ -2,9 +2,9 @@
     
 {% block contenido %}
     <form  method="post" > {% csrf_token %}
-
+        <h3> Escriba el mensaje que desea enviar: </h3>   
         {{ formulario.as_p }}
-        <input type="submit" value="Cargar nuevo mensaje">
+        <input type="submit" value="Enviar">
         
    </form>
 
