--- a/log_web/templates/log_web/agregar_avatar.html
+++ b/log_web/templates/log_web/agregar_avatar.html
@@ -6,7 +6,8 @@
 <form method="post" enctype="multipart/form-data">
 
     {% csrf_token %}
-
+    <h3> <p style="color: black"> Ingrese una foto de perfil de usuario </p></h3> 
+      
     {{ form.as_p }}
     <input type="submit" value="Cargar">
 </form>
