--- a/log_web/templates/log_web/update_user.html
+++ b/log_web/templates/log_web/update_user.html
@@ -2,7 +2,7 @@
 
 {% block contenido %}
 
-
+<div class= "container row" style = "min-width:60vw;"> <center>
     <h1> Editando información de {{ request.user.username }} </h1>
 
         <form  method="post"> {% csrf_token %}
@@ -14,7 +14,9 @@
 
 
         </form> 
+    
+</div>
 
-
+</center>
 
 {% endblock contenido %}
