--- a/WebPage/templates/WebPage/index.html
+++ b/WebPage/templates/WebPage/index.html
@@ -5,12 +5,16 @@
 <p>
   
 
-       <h1> <p style=color:rgb(126,76,236) > Bienvenid@s a Tienda Olivia!</p> </h1>
+       <h1> <p style=color:rgb(126,76,236) > Bienvenid@s a Tienda Olivia!</p> 
+         
+         <img src="/media/icons/TiendaOlivia.jpg" width="100" height="100" / alt="Avatar">
+      
+      </h1>
       
     </p>
     
     </td></tr>
-  
+
     <tr><td>
      <h5> <u>Buscamos reinventar objetos de la vida cotidiana con un diseño adaptable a cada persona.</u> </h5>
 
