--- a/WebPage/templates/WebPage/integrantes.html
+++ b/WebPage/templates/WebPage/integrantes.html
@@ -5,11 +5,12 @@
 <div style="text-align:center;">
     
 <h1> Somos dos amigas que empezaron  este emprendimiento juntas! </h1>   
-
+    <img src="/media/icons/Captura2.jpg" width="250" height="250" / alt="Avatar">
+      
 <p>
     {% for persona in integrantes%}
     
-    
+
      
          Yo soy {{persona.nombre }}, {{persona.profesion }}  
          
