--- a/WebPage/templates/WebPage/productos_confirm_delete.html
+++ b/WebPage/templates/WebPage/productos_confirm_delete.html
@@ -1,6 +1,8 @@
 {% extends 'WebPage/base.html' %}
 
-
+{% block encabezado %}
+Borrar Producto
+{% endblock encabezado %}
 {% block productos %}
   
     <form  method="POST" > {% csrf_token %}
