--- a/WebPage/templates/WebPage/sucursales.html
+++ b/WebPage/templates/WebPage/sucursales.html
@@ -4,7 +4,7 @@
  
 <div style="text-align:center;">
 <h1 > Te presentamos todas nuestras sucursales </h1>   
-
+    <img src="/media/icons/Captura3.jpg" width="250" height="250" / alt="Avatar">
 <p>
     {% for sucursal in sucursales%}
     
