--- a/WebPage/templates/WebPage/index.html
+++ b/WebPage/templates/WebPage/index.html
@@ -5,18 +5,18 @@
 <p>
   
 
-       <h1> <p style=color:rgb(126,76,236) > Bienvenid@s a Tienda Olivia!</p> 
+       <h5> <p style=color:rgb(126,76,236) > Bienvenid@s a Tienda Olivia!</p> 
          
-         <img src="/media/icons/TiendaOlivia.jpg" width="100" height="100" / alt="Avatar">
+         <img src="/media/icons/TiendaOlivia.jpg" width="250" height="250" / alt="Avatar">
       
-      </h1>
+      </h5>
       
     </p>
     
     </td></tr>
 
     <tr><td>
-     <h5> <u>Buscamos reinventar objetos de la vida cotidiana con un diseño adaptable a cada persona.</u> </h5>
+     <h5> Buscamos reinventar objetos de la vida cotidiana con un diseño adaptable a cada persona. </h5>
 
 {% endblock %}
 
